Current Temp spacing fixed

--- a/src/CurrentTemperature.css
+++ b/src/CurrentTemperature.css
@@ -7,6 +7,7 @@ img {
     float: left;
   }
   .current-temperature {
+    margin-top: -20px;
     font-size: 60px;
     font-weight: bold;
     color: thistle;
@@ -14,7 +15,6 @@ img {
     float: left;
   }
   .units {
-    margin-top: 20px;
     position: relative;
     float: left;
   }
